--- a/codigo/CMakeLists.txt
+++ b/codigo/CMakeLists.txt
@@ -160,13 +160,9 @@ include_directories(
 ## Mark executable scripts (Python etc.) for installation
 ## in contrast to setup.py, you can choose the destination
  catkin_install_python(PROGRAMS
-   scripts/ConAut_V5.py scripts/pubAng.py scripts/parking.py
+   scripts/pruebadani.py 
    DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
- )
-catkin_install_python(PROGRAMS
-   scripts/parking.py
-   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
- )
+   )
 
 ## Mark executables for installation
 ## See http://docs.ros.org/melodic/api/catkin/html/howto/format1/building_executables.html
